--- a/client/pages/admin/admin.wxss
+++ b/client/pages/admin/admin.wxss
@@ -3,9 +3,13 @@
   box-sizing: border-box;
 }
 
+.header {
+  height: 12%;
+}
+
 .header-listWrap {
   display: flex;
-  height: 150rpx;
+  height: 100%;
   align-items: flex-start; /*交叉轴靠上对齐*/
   justify-content: space-between; /*主轴分散均匀对齐*/
 }
@@ -18,18 +22,21 @@
   border-bottom: solid 1px #999;
   box-sizing: border-box;
 }
-.header-listWrap view:last-child{
+
+.header-listWrap view:last-child {
   border-right: 0;
 }
 
 .header-listWrap view.active {
   border-bottom: 0;
-  background: #ffc
+  background: #ffc;
 }
-.header-listWrap view.active text{
-  opacity: 0
+
+.header-listWrap view.active text {
+  opacity: 0;
 }
-.header-listWrap view.active i{
+
+.header-listWrap view.active i {
   margin-top: 30rpx;
   font-size: 60rpx;
 }
@@ -50,9 +57,149 @@
 
 .header-title {
   border-bottom: solid 1px #999;
-  height: 60rpx;
+  height: 5%;
   text-align: center;
-  line-height: 60rpx;
+  line-height: 200%;
   background: #ffc;
-  color:#666
+  color: #666;
+}
+
+.manWrapper {
+  width: 100%;
+  height: 83%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.manWrapper>scroll-view {
+  flex-grow: 1;
+  height: 100%;
+  overflow: auto;
+  background: #eee;
+}
+
+.manWrapper>view {
+  width: 100%;
+  height: 80rpx;
+}
+
+.manWrapper .bottomBtu button {
+  width: 100%;
+  height: 100%;
+  background: #c00;
+  border-radius: 0;
+  line-height: 80rpx;
+  color: #fff;
+}
+
+.bannerItem {
+  width: 100%;
+  position: relative;
+  border-bottom: solid 1px #ccc;
+}
+
+.bannerItem image {
+  width: 100%;
+  height: 300rpx;
+}
+
+.bannerItem text {
+  position: absolute;
+  height: 70rpx;
+  line-height: 70rpx;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.bannerItem view {
+  position: absolute;
+  height: 80rpx;
+  width: 80rpx;
+  right: 0;
+  top: 0;
+  border-radius: 0 0 0 100rpx;
+  background: rgba(255, 255, 255, 1);
+  text-align: right;
+  border-left: solid 1px #ccc;
+  border-bottom: solid 1px #ccc;
+}
+
+.bannerItem icon {
+  margin: 10rpx 10rpx auto auto;
+}
+
+.menuItem {
+  width: 100%;
+  background: #fff;
+  line-height: 100rpx;
+  text-align: center;
+  height: 100rpx;
+  border-bottom: solid 1px #ccc;
+  display: flex;
+}
+
+.menuItem text {
+  flex: 1;
+}
+
+.menuItem view {
+  float: right;
+  width: 100rpx;
+  height: 100rpx;
+  line-height: 100rpx;
+  background: #cec;
+  position: relative;
+}
+
+.menuItem view icon {
+  color: #fff;
+  position: absolute;
+  left: 0;
+  top: 20rpx;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 100rpx;
+}
+
+.manWrapper .menuSelectWrap {
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: center;
+  background: #eee;
+}
+
+.goodsItem text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.goodsItem image {
+  height: 100rpx;
+  width: 100rpx;
+  margin: 0 10rpx;
+}
+
+.pagerWrapper {
+  height: 120rpx !important;
+  text-align: center;
+  display: flex;
+}
+
+.pagerWrapper text {
+  flex: 1;
+  line-height: 100rpx;
+}
+
+.pagerWrapper button {
+  width: 200rpx;
+  height: 100rpx;
+  background: #ddd;
+  border-radius: 0;
+  line-height: 100rpx;
+  color: #666;
 }
