--- a/client/pages/admin/admin.wxml
+++ b/client/pages/admin/admin.wxml
@@ -1,4 +1,5 @@
 <view class='container-admin'>
+  <!--Tab-->
   <scroll-view scroll-x class='header'>
     <view class='header-listWrap'>
       <view class='{{item.isActive?"active":""}}' data-code="{{item.code}}" wx:for="{{tabList}}" wx:key="{{index}}" bindtap='changeTab'>
@@ -11,10 +12,10 @@
   <!--banner-->
   <view class='manWrapper {{showType.code==="banner"?"":"hide"}}'>
     <scroll-view scroll-y enable-back-to-top>
-      <view wx:for="{{imgUrls}}" wx:key="{{item.id}}" class='bannerItem'>
+      <view wx:for="{{imgUrls}}" wx:key="{{item.id}}" class='bannerItem' data-id="{{item.id}}" bindtap='goEditBanner'>
         <image src="{{item.url}}"></image>
         <text>{{item.title}}</text>
-        <view data-id="{{item.id}}" bindtap='btuDeleteBanner'>
+        <view data-id="{{item.id}}" catchtap='btuDeleteBanner'>
           <icon size='20' type='cancel'></icon>
         </view>
       </view>
@@ -26,9 +27,9 @@
   <!--menu-->
   <view class='manWrapper {{showType.code==="menu"?"":"hide"}}'>
     <scroll-view scroll-y enable-back-to-top>
-      <view wx:for="{{menuList}}" wx:key="{{item.id}}" class='menuItem'>
-        <text>{{item.name}}</text>
-        <view data-id="{{item.id}}" bindtap='btuDeleteMenu'>
+      <view wx:for="{{menuList}}" wx:key="{{item.id}}" class='menuItem' data-id="{{item.id}}" bindtap='goEditMenu'>
+        <i class='icon-{{item.icon}}'></i><text>{{item.name}}</text>
+        <view data-id="{{item.id}}" catchtap='btuDeleteMenu'>
           <icon size='20' type='cancel'></icon>
         </view>
       </view>
@@ -64,4 +65,25 @@
       <button type="default" hover-class="button-hover">新增</button>
     </view>
   </view>
+  <!--menu-->
+  <view class='manWrapper {{showType.code==="config"?"":"hide"}}'>
+    <scroll-view scroll-y enable-back-to-top>
+      <view class='formItemWrapper'>
+        <text>店铺名称:</text>
+        <input type='text' value='{{config.storeName}}' />
+      </view>
+      <view class='formItemWrapper'>
+        <text>头部色调:</text>
+        <input type='text' value='{{config.themeColor}}'/>
+      </view>
+      <view class='formItemWrapper'>
+        <text>欢迎语:</text>
+        <textarea value='{{config.welcome}}'></textarea>
+      </view>
+    </scroll-view>
+    <view class='bottomBtu'>
+      <button type="default" hover-class="button-hover">确认更新</button>
+    </view>
+  </view>
 </view>
+
