--- a/client/pages/admin/admin.wxml
+++ b/client/pages/admin/admin.wxml
@@ -13,7 +13,7 @@
   <view class='manWrapper {{showType.code==="banner"?"":"hide"}}'>
     <scroll-view scroll-y enable-back-to-top>
       <view wx:for="{{imgUrls}}" wx:key="{{item.id}}" class='bannerItem' data-id="{{item.id}}" bindtap='goEditBanner'>
-        <image src="{{item.url}}"></image>
+        <image src="{{item.imageUrl}}"></image>
         <text>{{item.title}}</text>
         <view data-id="{{item.id}}" catchtap='btuDeleteBanner'>
           <icon size='20' type='cancel'></icon>
@@ -21,7 +21,7 @@
       </view>
     </scroll-view>
     <view class='bottomBtu'>
-      <button type="default" hover-class="button-hover">新增</button>
+      <button type="default" hover-class="button-hover" bindtap='goAddBanner'>新增</button>
     </view>
   </view>
   <!--menu-->
@@ -35,23 +35,23 @@
       </view>
     </scroll-view>
     <view class='bottomBtu'>
-      <button type="default" hover-class="button-hover">新增</button>
+      <button type="default" hover-class="button-hover" bindtap='goAddMenu'>新增</button>
     </view>
   </view>
   <!--goods-->
   <view class='manWrapper {{showType.code==="goods"?"":"hide"}}'>
     <view class='menuSelectWrap'>
-      <picker bindchange="bindPickerChange" value="{{id}}" range="{{menuList}}" range-key="name">
+      <picker bindchange="bindgoodsTypePickerChange" value="{{goods.chooseType}}" range="{{menuList}}" range-key="name">
         <view class="picker">
-          Menu类别：{{menuList[index].name}}▼
+          Menu类别：{{menuList[goods.chooseType].name}}▼
         </view>
       </picker>
     </view>
     <scroll-view scroll-y enable-back-to-top>
-      <view wx:for="{{goods.list}}" wx:key="{{item.id}}" class='menuItem goodsItem'>
+      <view wx:for="{{goods.list}}" wx:key="{{item.id}}" class='menuItem goodsItem' bindtap='goEditGoods'>
         <image src='{{item.image}}'></image>
         <text>{{item.name}}</text>
-        <view data-id="{{item.id}}" bindtap='btuDeleteGoods'>
+        <view data-id="{{item.id}}" catchtap='btuDeleteGoods'>
           <icon size='20' type='cancel'></icon>
         </view>
       </view>
@@ -62,10 +62,10 @@
       <button>▶</button>
     </view>
     <view class='bottomBtu'>
-      <button type="default" hover-class="button-hover">新增</button>
+      <button type="default" hover-class="button-hover" bindtap='goAddGoods'>新增</button>
     </view>
   </view>
-  <!--menu-->
+  <!--config-->
   <view class='manWrapper {{showType.code==="config"?"":"hide"}}'>
     <scroll-view scroll-y enable-back-to-top>
       <view class='formItemWrapper'>
