--- a/client/pages/admin/admin.wxss
+++ b/client/pages/admin/admin.wxss
@@ -92,6 +92,9 @@
   line-height: 100rpx;
   color: #fff;
 }
+.manWrapper .bottomBtu button:active{
+  background: #c99
+}
 
 .bannerItem {
   width: 100%;
