--- a/client/pages/admin/admin.wxss
+++ b/client/pages/admin/admin.wxss
@@ -157,6 +157,10 @@
   flex: 1;
   text-align: left
 }
+.menuItem text.typeText{
+  color: #999;
+  font-size: 20rpx;
+}
 
 .menuItem view {
   float: right;
