--- a/client/pages/edit/edit.wxml
+++ b/client/pages/edit/edit.wxml
@@ -2,7 +2,7 @@
 
 <view class='container-edit'>
   <scroll-view scroll-y class="mainWrapper">
-    <view class='menuItem' wx:for="{{fromsList}}" wx:key="index">
+    <view class='menuItem {{!item.visible?"":"hide"}}' wx:for="{{fromsList}}" wx:key="index">
       <template is="{{item.template}}" data="{{...item}}" />
     </view>
   </scroll-view>
