--- a/client/pages/admin/admin.wxss
+++ b/client/pages/admin/admin.wxss
@@ -1,258 +1,293 @@
 .container-admin {
-  height: 100%;
-  box-sizing: border-box;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .header {
-  height: 12%;
+    height: 12%;
 }
 
 .header-listWrap {
-  display: flex;
-  height: 100%;
-  align-items: flex-start; /*交叉轴靠上对齐*/
-  justify-content: space-between; /*主轴分散均匀对齐*/
+    display: flex;
+    height: 100%;
+    align-items: flex-start;
+    /*交叉轴靠上对齐*/
+    justify-content: space-between;
+    /*主轴分散均匀对齐*/
 }
 
 .header-listWrap view {
-  flex: 1;
-  height: 100%;
-  text-align: center;
-  border-right: solid 1px #999;
-  border-bottom: solid 1px #999;
-  box-sizing: border-box;
+    flex: 1;
+    height: 100%;
+    text-align: center;
+    border-right: solid 1px #999;
+    border-bottom: solid 1px #999;
+    box-sizing: border-box;
 }
 
 .header-listWrap view:last-child {
-  border-right: 0;
+    border-right: 0;
 }
 
 .header-listWrap view.active {
-  border-bottom: 0;
-  background: #ffc;
+    border-bottom: 0;
+    background: #ffc;
 }
 
 .header-listWrap view.active text {
-  opacity: 0;
+    opacity: 0;
 }
 
 .header-listWrap view.active i {
-  margin-top: 30rpx;
-  font-size: 60rpx;
+    margin-top: 30rpx;
+    font-size: 60rpx;
 }
 
 .header-listWrap text {
-  display: inline-block;
-  width: 100%;
-  -webkit-transition: all 0.2s ease-out;
+    display: inline-block;
+    width: 100%;
+    -webkit-transition: all 0.2s ease-out;
 }
 
 .header-listWrap i {
-  font-family: 'iconfont';
-  font-size: 34rpx;
-  display: inline-block;
-  margin-top: 20%;
-  -webkit-transition: all 0.1s ease-out;
+    font-family: 'iconfont';
+    font-size: 34rpx;
+    display: inline-block;
+    margin-top: 20%;
+    -webkit-transition: all 0.1s ease-out;
 }
 
 .header-title {
-  border-bottom: solid 1px #999;
-  height: 5%;
-  text-align: center;
-  line-height: 200%;
-  background: #ffc;
-  color: #666;
+    border-bottom: solid 1px #999;
+    height: 5%;
+    text-align: center;
+    line-height: 200%;
+    background: #ffc;
+    color: #666;
 }
 
 .manWrapper {
-  width: 100%;
-  height: 83%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+    width: 100%;
+    height: 83%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
 .manWrapper>scroll-view {
-  flex-grow: 1;
-  height: 100%;
-  overflow: auto;
-  background: #eee;
+    flex-grow: 1;
+    height: 100%;
+    overflow: auto;
+    background: #eee;
 }
 
 .manWrapper .bottomBtu {
-  width: 100%;
-  height: 100rpx;
+    width: 100%;
+    height: 100rpx;
 }
 
 .manWrapper .bottomBtu button {
-  width: 100%;
-  height: 100%;
-  background: #c00;
-  border-radius: 0;
-  line-height: 100rpx;
-  color: #fff;
+    width: 100%;
+    height: 100%;
+    background: #c00;
+    border-radius: 0;
+    line-height: 100rpx;
+    color: #fff;
 }
-.manWrapper .bottomBtu button:active{
-  background: #c99
+
+.manWrapper .bottomBtu button:active {
+    background: #c99
 }
 
 .bannerItem {
-  width: 100%;
-  position: relative;
-  border-bottom: solid 1px #ccc;
+    width: 100%;
+    position: relative;
+    border-bottom: solid 1px #ccc;
 }
 
 .bannerItem image {
-  width: 100%;
-  height: 300rpx;
+    width: 100%;
+    height: 300rpx;
 }
 
 .bannerItem text {
-  position: absolute;
-  height: 70rpx;
-  line-height: 70rpx;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    height: 70rpx;
+    line-height: 70rpx;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .bannerItem view {
-  position: absolute;
-  height: 80rpx;
-  width: 80rpx;
-  right: 0;
-  top: 0;
-  border-radius: 0 0 0 100rpx;
-  background: rgba(255, 255, 255, 1);
-  text-align: right;
-  border-left: solid 1px #ccc;
-  border-bottom: solid 1px #ccc;
+    position: absolute;
+    height: 80rpx;
+    width: 80rpx;
+    right: 0;
+    top: 0;
+    border-radius: 0 0 0 100rpx;
+    background: rgba(255, 255, 255, 1);
+    text-align: right;
+    border-left: solid 1px #ccc;
+    border-bottom: solid 1px #ccc;
 }
 
 .bannerItem icon {
-  margin: 10rpx 10rpx auto auto;
+    margin: 10rpx 10rpx auto auto;
 }
 
 .menuItem {
-  width: 100%;
-  background: #fff;
-  line-height: 100rpx;
-  text-align: center;
-  height: 100rpx;
-  border-bottom: solid 1px #ccc;
-  display: flex;
+    width: 100%;
+    background: #fff;
+    line-height: 100rpx;
+    text-align: center;
+    height: 100rpx;
+    border-bottom: solid 1px #ccc;
+    display: flex;
 }
+
 .menuItem i {
-  font-family: 'iconfont';
-  font-size: 44rpx;
-  margin-right: 10rpx;
-  display: inline-block;
-  color: #ff5983;
-  flex: 1;
-  text-align: right
+    font-family: 'iconfont';
+    font-size: 44rpx;
+    margin-right: 10rpx;
+    display: inline-block;
+    color: #ff5983;
+    flex: 1;
+    text-align: right
 }
 
 .menuItem text {
-  flex: 1;
-  text-align: left
+    flex: 1;
+    text-align: left
 }
-.menuItem text.typeText{
-  color: #999;
-  font-size: 20rpx;
+
+.menuItem text.typeText {
+    color: #999;
+    font-size: 20rpx;
 }
 
 .menuItem view {
-  float: right;
-  width: 100rpx;
-  height: 100rpx;
-  line-height: 100rpx;
-  background: #cec;
-  position: relative;
+    float: right;
+    width: 100rpx;
+    height: 100rpx;
+    line-height: 100rpx;
+    background: #cec;
+    position: relative;
 }
 
 .menuItem view icon {
-  color: #fff;
-  position: absolute;
-  left: 0;
-  top: 20rpx;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  line-height: 100rpx;
+    color: #fff;
+    position: absolute;
+    left: 0;
+    top: 20rpx;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 100rpx;
 }
 
 .manWrapper .menuSelectWrap {
-  height: 80rpx;
-  line-height: 80rpx;
-  text-align: center;
-  background: #eee;
+    height: 100rpx;
+    line-height: 100rpx;
+    text-align: center;
+    background: #eee;
+}
+
+.manWrapper .menuSelectWrap picker,
+.manWrapper .menuSelectWrap>view {
+    display: inline-block !important;
+    vertical-align: middle;
+    width: 49%
+}
+
+.manWrapper .menuSelectWrap>view input {
+    width: 200rpx;
+    height: 40rpx;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 30rpx;
+    border: solid 1rpx #999;
+    background: #fff;
+    text-align: left
+}
+
+.manWrapper .menuSelectWrap>view button {
+    width: 150rpx;
+    height: 55rpx;
+    line-height: 55rpx;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 30rpx;
+    background: -webkit-linear-gradient(top, #eee, #999);
 }
 
 .goodsItem text {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .goodsItem image {
-  height: 100rpx;
-  width: 100rpx;
-  margin: 0 10rpx;
+    height: 100rpx;
+    width: 100rpx;
+    margin: 0 10rpx;
 }
 
 .pagerWrapper {
-  height: 120rpx !important;
-  text-align: center;
-  display: flex;
+    height: 120rpx !important;
+    text-align: center;
+    display: flex;
 }
 
 .pagerWrapper text {
-  flex: 1;
-  line-height: 100rpx;
+    flex: 1;
+    line-height: 100rpx;
 }
 
 .pagerWrapper button {
-  width: 200rpx;
-  height: 100rpx;
-  background: #ddd;
-  border-radius: 0;
-  line-height: 100rpx;
-  color: #666;
+    width: 100rpx;
+    height: 80rpx;
+    background: -webkit-linear-gradient(top, #eee, #ccc);
+    border-radius: 0;
+    line-height: 80rpx;
+    color: #666;
+    font-size: 30rpx;
 }
 
 .formItemWrapper {
-  width: 100%;
-  text-align: center;
-  padding-top:50rpx;
+    width: 100%;
+    text-align: center;
+    padding-top: 50rpx;
 }
 
 .formItemWrapper text {
-  width: 20%;
-  font-size: 30rpx;
-  display: inline-block;
+    width: 20%;
+    font-size: 30rpx;
+    display: inline-block;
 }
 
 .formItemWrapper input {
-  width: 70%;
-  height: 80rpx;
-  display: inline-block;
-  border:solid 1rpx #999;
-  vertical-align: middle;
-  background: #fff;
-  text-align: left;
-  padding-left: 0.2rem;
-  box-shadow:1rpx 1rpx 3rpx #999;
-  border-radius: 10rpx
+    width: 70%;
+    height: 80rpx;
+    display: inline-block;
+    border: solid 1rpx #999;
+    vertical-align: middle;
+    background: #fff;
+    text-align: left;
+    padding-left: 0.2rem;
+    box-shadow: 1rpx 1rpx 3rpx #999;
+    border-radius: 10rpx
 }
+
 .formItemWrapper textarea {
-  width: 70%;
-  display: inline-block;
-  border:solid 1rpx #999;
-  vertical-align: middle;
-  background: #fff;
-  text-align: left;
-  padding-left: 0.2rem;
-  box-shadow:1rpx 1rpx 3rpx #999;
-  border-radius: 10rpx
+    width: 70%;
+    display: inline-block;
+    border: solid 1rpx #999;
+    vertical-align: middle;
+    background: #fff;
+    text-align: left;
+    padding-left: 0.2rem;
+    box-shadow: 1rpx 1rpx 3rpx #999;
+    border-radius: 10rpx
 }
