--- a/client/pages/edit/edit.wxss
+++ b/client/pages/edit/edit.wxss
@@ -1,110 +1,225 @@
 .container-edit {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    position: relative
 }
 
 .button-hover {
-  background: #c33;
+    background: #c33;
 }
 
 .container-edit .mainWrapper {
-  flex: 1;
-  width: 100%;
-  background: #eee;
-  overflow: auto;
+    flex: 1;
+    width: 100%;
+    background: #eee;
+    overflow: auto;
 }
 
 .container-edit .bottomBtu {
-  width: 100%;
-  height: 100rpx;
+    width: 100%;
+    height: 100rpx;
 }
 
 .container-edit .bottomBtu button {
-  width: 100%;
-  height: 100%;
-  background: #c00;
-  border-radius: 0;
-  line-height: 100rpx;
-  color: #fff;
+    width: 100%;
+    height: 100%;
+    background: #c00;
+    border-radius: 0;
+    line-height: 100rpx;
+    color: #fff;
 }
 
 .menuItem {
-  padding: 15rpx;
-  margin: 15rpx;
-  border-bottom: solid 1px #ddd;
+    padding: 15rpx;
+    margin: 15rpx;
+    border-bottom: solid 1px #ddd;
 }
 
 .menuItem input {
-  width: 100%;
-  height: 80rpx;
-  display: inline-block;
-  border: solid 1rpx #999;
-  vertical-align: middle;
-  background: #fff;
-  text-align: left;
-  padding-left: 0.2rem;
-  margin: 20rpx auto;
-  border-radius: 20rpx;
-  box-shadow: 2rpx 2rpx 2rpx #999;
+    width: 100%;
+    height: 80rpx;
+    display: inline-block;
+    border: solid 1rpx #999;
+    vertical-align: middle;
+    background: #fff;
+    text-align: left;
+    padding-left: 0.2rem;
+    margin: 20rpx auto;
+    border-radius: 20rpx;
+    box-shadow: 2rpx 2rpx 2rpx #999;
 }
 
 .menuItem .uploader-text {
-  margin: 20rpx auto;
-  border: solid 1px #ccc;
-  display: inline-block;
-  padding: 10rpx 20rpx;
-  background: #ddd;
-  box-shadow: 2rpx 2rpx 2rpx #999;
-  border-radius: 20rpx;
+    margin: 20rpx auto;
+    border: solid 1px #ccc;
+    display: inline-block;
+    padding: 10rpx 20rpx;
+    background: #ddd;
+    box-shadow: 2rpx 2rpx 2rpx #999;
+    border-radius: 20rpx;
 }
 
 .menuItem .contenteditableView {
-  margin: 20rpx auto;
-  border: solid 1px #ccc;
-  display: inline-block;
-  padding: 10rpx 20rpx;
-  background: #fff;
-  box-shadow: 2rpx 2rpx 2rpx #999;
-  border-radius: 20rpx;
-  width: 95%;
-  height: 500rpx;
+    margin: 20rpx auto;
+    border: solid 1px #ccc;
+    display: inline-block;
+    padding: 10rpx 20rpx;
+    background: #fff;
+    box-shadow: 2rpx 2rpx 2rpx #999;
+    border-radius: 20rpx;
+    width: 95%;
+    height: 500rpx;
 }
 
 .menuItem .uploader-text:active {
-  background: #ccc;
+    background: #ccc;
 }
 
 .menuItem textarea {
-  width: 100%;
-  display: inline-block;
-  border: solid 1rpx #999;
-  vertical-align: middle;
-  background: #fff;
-  text-align: left;
-  padding-left: 0.2rem;
-  box-shadow: 2rpx 2rpx 2rpx #999;
-  border-radius: 20rpx;
+    width: 100%;
+    display: inline-block;
+    border: solid 1rpx #999;
+    vertical-align: middle;
+    background: #fff;
+    text-align: left;
+    padding-left: 0.2rem;
+    box-shadow: 2rpx 2rpx 2rpx #999;
+    border-radius: 20rpx;
 }
 
 .uploader-image {
-  width: 100%;
-  border: solid 2rpx #999;
-  border-radius: 20rpx;
-  box-shadow: 0 0 8rpx #999;
-  margin-bottom: 10rpx;
+    width: 100%;
+    border: solid 2rpx #999;
+    border-radius: 20rpx;
+    box-shadow: 0 0 8rpx #999;
+    margin-bottom: 10rpx;
 }
-.uploader-container .imageWrap{position: relative}
-.uploader-container .imageWrap .delImage{
-  position: absolute;
-  height: 80rpx;
-  width: 80rpx;
-  right: 0;
-  top: 5rpx;
-  border-radius: 0 20rpx 0 100rpx;
-  background: rgba(255, 255, 255, 1);
-  text-align: right;
-  border-left: solid 1px #ccc;
-  border-bottom: solid 1px #ccc;
+
+.uploader-container .imageWrap {
+    position: relative
+}
+
+.uploader-container .imageWrap .delImage {
+    position: absolute;
+    height: 80rpx;
+    width: 80rpx;
+    right: 0;
+    top: 5rpx;
+    border-radius: 0 20rpx 0 100rpx;
+    background: rgba(255, 255, 255, 1);
+    text-align: right;
+    border-left: solid 1px #ccc;
+    border-bottom: solid 1px #ccc;
+}
+
+.goodsTagItem {
+    display: inline-block;
+    padding: 10rpx;
+    border:solid 1rpx #ccc;
+    margin: 15rpx 15rpx 15rpx 0;
+    background: #fff
+}
+
+.tagChooseButton button {
+    font-size: 30rpx;
+    margin: 20rpx auto;
+    background: -webkit-linear-gradient(top, #eee, #ccc);
+}
+
+.tagWrapper {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    height: 95%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #eee;
+    margin: auto;
+    border: solid 1px #ccc;
+    box-shadow: 0 0 20rpx #999;
+    z-index: 2;
+}
+
+.tagWrapper scroll-view {
+    flex: 10;
+}
+
+.tagWrapper .tagList {
+    margin-bottom: 80rpx;
+    min-height: 100rpx;
+}
+
+.tagWrapper .tagList>text:first-child {
+    border-bottom: solid 1rpx #ccc;
+    font-size: 38rpx;
+    line-height: 44rpx;
+    display: block;
+    width: 100%;
+    padding: 10rpx;
+    background: #cee;
+}
+
+.tagWrapper .tagList>view {
+    display: inline-block;
+    border: solid 1px #ccc;
+    padding: 20rpx 20rpx 20rpx 60rpx;
+    margin: 30rpx;
+    border-radius: 10rpx;
+    background: #fff;
+    position: relative
+}
+
+.tagWrapper .tagList>view i {
+    font-family: 'iconfont';
+    font-size: 60rpx;
+    position: absolute;
+    top: -5rpx;
+    left: -5rpx;
+}
+
+.tagWrapper .tagList>view.active {
+    border: solid 1px #c00;
+}
+
+.tagList input {
+    border: solid 1px #ccc;
+    background: #fff;
+    height: 50rpx;
+    width: 300rpx;
+    display: inline-block;
+    margin-right: 10rpx;
+}
+
+.tagList button {
+    background: -webkit-linear-gradient(top, #eee, #999);
+    width: 150rpx;
+    border: solid 1px #ccc;
+    display: inline-block;
+    height: 55rpx;
+    line-height: 55rpx;
+    font-size: 30rpx;
+}
+
+.tagSubmitWrap {
+    flex: 1;
+    height: 40rpx;
+    width: 100%;
+    text-align: center
+}
+
+.tagSubmitWrap button {
+    background: -webkit-linear-gradient(top, #c99, #c00);
+    color: #fff;
+    width: 47%;
+    border: solid 1px #c00;
+    display: inline-block;
+    margin: 0 1%;
+    height: 80rpx;
+    line-height: 80rpx;
+    font-size: 30rpx
 }
