--- a/client/pages/admin/admin.wxml
+++ b/client/pages/admin/admin.wxml
@@ -50,7 +50,7 @@
         </view>
       </picker>
       <view>
-        <input type="text" maxlength='30' placeholder="名称搜索" bindinput="searchTextInput" value="{{goodsSearchStr}}"/>
+        <input type="text" maxlength='30' placeholder="名称搜索" bindinput="searchTextInput" value="{{goodsSearchStr}}" />
         <button catchtap="searchgoods">搜索</button>
       </view>
     </view>
@@ -88,6 +88,9 @@
       <view class='formItemWrapper'>
         <text>欢迎语:</text>
         <textarea value='{{config.welcome}}'></textarea>
+      </view>
+      <view style='text-align:center'>
+        <navigator url="/pages/home/home">首页</navigator>
       </view>
     </scroll-view>
     <view class='bottomBtu'>
